<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sun"
        android:icon="@drawable/baseline_wb_sunny_24"
        android:title="@string/sun_fragment" />

    <item
        android:id="@+id/navigation_moon"
        android:icon="@drawable/baseline_nightlight_24"
        android:title="@string/moon_fragment" />

    <item
        android:id="@+id/navigation_compass"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/compass_fragment" />
</menu>