...
                        app:backgroundTint="@color/md_theme_primary"
                        app:tint="@color/md_theme_onPrimary" />
                </LinearLayout>
            </RelativeLayout>

            <fragment
                android:id="@+id/nav_host_activity_result"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:defaultNavHost="true"
                app:navGraph="@navigation/result_navigation" />
...
